Fix content shift on stats row hover (#3614)
* Fix content shift on stats row hover

* Fix 500 when saving Configure Server form

* Tidy some JS selectors

* Revert "Fix 500 when saving Configure Server form"

This reverts commit 0ac9a24b16565550e169937a5d798a70997fbf77.

--- a/web/css/src/themes/default.css
+++ b/web/css/src/themes/default.css
@@ -1263,12 +1263,14 @@
 		display: flex;
 		align-items: flex-start;
 		justify-content: space-between;
+		border-left: 1px solid transparent;
+		border-right: 1px solid transparent;
 		padding: 30px 20px;
 
 		&:hover {
 			background-color: #f8f8f8;
-			border-left: 1px solid #ddd;
-			border-right: 1px solid #ddd;
+			border-left-color: #ddd;
+			border-right-color: #ddd;
 			box-shadow: 0 2px 10px rgb(0 0 0 / 10%);
 		}
 	}
